minor content changes

--- a/callforpapers.html
+++ b/callforpapers.html
@@ -154,6 +154,23 @@
         </ul>
 
       </div>
+      <div class="col-lg-4">
+        <h4>Electronics Engineering</h4>
+        <ul>
+          <li>Medical signal processing</li>
+          <li>Non-linear control systems</li>
+          <li>Biomedical instrumentation</li>
+          <li>Robotics </li>
+        </ul>
+      </div>
+
+      <div class="col-lg-4">
+        <h4>Computer Engineering</h4>
+        <ul>
+          <li>Machine Learning</li>
+          <li>Artificial Intelligence </li>
+        </ul>
+      </div>
     </div>
     <br />
     <hr />
