--- a/index.html
+++ b/index.html
@@ -50,15 +50,18 @@
   <section class="masthead">
     <div class="container h-100">
       <div class="row h-100 align-items-center justify-content-center text-center">
-        <div class="col-lg-10 align-self-end">
-          <h1 class="text-uppercase font-weight-bold">ICEC3T 2021</h1>
-          <hr class="divider-light my-4" />
-        </div>
-        <div class="col-lg-8 align-self-baseline">
-          <p class="mb-5 font-weight-bold" style="color:black">IEEE International Conference on Electronics,
-            Communication, Control systems and Computing Technologies –2021
-          </p>
-          <a class="btn btn-default" href="#agenda"><span class="px-3  text-white">Find Out More</span></a>
+        <div class="card py-5 mx-3" style="opacity: 0.8">
+          <center>
+            <div class="col-lg-10">
+              <p class="font-weight-bold" style="color:black">IEEE SJCE Student Branch in association with <br />Department of Electronics and Communication Engineering is organizing</p>
+              <h1 class="text-uppercase font-weight-bold">ICEC3T 2021</h1>
+              <hr class="divider-light my-4" />
+              <p class="mb-5 font-weight-bold" style="color:black">IEEE International Conference on Electronics,
+                Communication, Control systems and Computing Technologies –2021
+              </p>
+              <a class="btn btn-default" href="#overview"><span class="px-3  text-white">Find Out More</span></a>
+            </div>
+          </center>
         </div>
       </div>
     </div>
@@ -76,13 +79,11 @@
               <br /> SRI JAYACHAMARAJENDRA COLLEGE OF ENGINEERING, MYSURU
             </p>
           </i>
-
-          <p> <b>DEPARTMENT OF ELECTRONICS AND COMMUNICATION ENGINEERING</b><br />
-            is organizing two days</p>
-
-          <p>IEEE International Conference on Electronics,
-            Communication, Control systems and Computing Technologies –2021
-
+          <p>
+            <b>Organized by</b> IEEE SJCE Student branch
+          </p>
+          <p>
+            <b>Co-organized by</b> Department of Electronics and Communication Engineering<br /> and JSS Science and Technology University
           </p>
         </div>
       </div>
@@ -94,7 +95,7 @@
     <div class="container text-white">
       <div class="row justify-content-center">
         <div class="col-lg-8 text-center">
-          <h2 class="mt-0 text-small">We'll see you on 18th December 2021.</h2>
+          <h2 class="mt-0 text-small">We'll see you on 17th December 2021.</h2>
           <hr class="divider-light my-4" />
           <div class="col-md-12 text-center rounded shadow p-3">
             <div id="clock-b" class="countdown-circles d-flex flex-wrap justify-content-center"></div>
@@ -115,9 +116,9 @@
       <hr class="divider my-4" />
       <div class="row d-flex justify-content-center">
         <div class="col-md-12 py-3" id="overview">
-          First IEEE International Conference on Electronics, Communication, Control systems and Computing Technologies (ICEC3T 2021) organized on 18- 19, December 2021 by JSS S&TU (SJCE), JSS Technical Institutions Campus, Mysuru, Karnataka, India
-          is a premier international conference and is technically sponsored by IEEE Bangalore Section. The theme for ICEC3T 2021 is to promote the recent innovations in various fields of engineering and technology bringing together academia and
-          industry. This conference provides an excellent opportunity and benefit for faculty members, research scholars, students and industry delegates to present, demonstrate and discuss innovative research developments in the fields of
+          First IEEE International Conference on Electronics, Communication, Control systems and Computing Technologies (ICEC3T 2021) organized on 17th – 19th, December 2021 by JSS S&TU (SJCE), JSS Technical Institutions Campus, Mysuru, Karnataka,
+          India is a premier international conference and is technically sponsored by IEEE Bangalore Section. The theme for ICEC3T 2021 is to promote the recent innovations in various fields of engineering and technology bringing together academia
+          and industry. This conference provides an excellent opportunity and benefit for faculty members, research scholars, students and industry delegates to present, demonstrate and discuss innovative research developments in the fields of
           electronics, communication, control systems and computing technology.<br /><br />
         </div>
       </div>
@@ -205,17 +206,24 @@
                 <p>Dr. Siddramaiah, Vice Chancellor, JSS STU – Mysuru.</p>
                 <p>Dr. S. A. Dhanaraj, Registrar, JSS STU – Mysuru.</p>
                 <p>Dr. S. B Kivade, Principal, SJCE Mysuru.</p>
-                <p>Dr. Mallikarjun Aaradhya, Dean Research, JSS STU – Mysuru.</p>
                 <p>Dr. T. N Naghabhushan, Dean Engineering, JSS STU – Mysuru.</p>
-                <p>Dr. P.Nagesh, Dean Management, JSS STU – Mysuru.</p><br />
-                <p class="font-weight-bold">International and National Advisory committee:</p>
+                <p>Dr. P.Nagesh, Dean Management, JSS STU – Mysuru.</p>
+                <p>Dr. H R Mahadevaswamy, Joint Director, Technical Education Division, JSS Mahavidyapeetha</p><br />
+                <p class="font-weight-bold">International Advisory committee:</p>
+                <p>Dr. Rajkumar Buyya, Director, Cloud Computing and Distributed Systems Lab,The University of Melbourne</p>
                 <p>Dr. K V Ramanujachary, Professor, Dept. of Chemistry, Rowan University, Glassboro, New Jersey</p>
                 <p>Dr. D. Vaman, CTO, Digital Compression Technology, Virginia, USA</p>
-                <p>Dr. Monjay Saha, Research Scientist, Emory University, USA</p>
+                <p>Dr. Lalit Kumar Goel, FIEEE, Director, Renaissance Engineering Programme,Nanyang Technological University, Singapore</p>
+                <p>Dr. M N S Swamy, FIEEE,Research Professor, Concordia University, Canada</p>
                 <p>Dr. Karthik Yogendra, Research Engineer, IBM, Albany, New York, USA</p>
-                <p>Dr. Vijay Rajanna, Research Engineer, Sensel, USA</p>
-                <p>Dr. V Prithviraj, Adjunct Professor, ECE Dept, at VIGNAN UNIVERSITY Puducherry, India</p>
+                <p>Dr. Vijay Rajanna, Research Engineer, Sensel, USA</p><br />
+
+                <p class="font-weight-bold">National Advisory committee:</p>
+                <p>Dr. V Prithviraj, Adjunct Professor, Dept. of ECE at VIGNAN UNIVERSITY Puducherry, India</p>
                 <p>Dr. P. Naghabhushan, Director,Indian Institute of Information Technology, Allahabad, (U.P.) INDIA</p>
+                <p>Dr. Hariprasad S A, Director, Faculty of Engineering and Technology, Jain University</p>
+                <p>Dr. Ashwini Appaji M, IEEE Bangalore section Execom member, INDIA</p>
+                <p>Dr. Bindu A. Thomas, Chair, IEEE Mysore Subsection,VVIET, Mysuru</p>
               </div>
             </div>
           </div>
@@ -224,20 +232,53 @@
               <div class="card-body mx-3">
                 <p class="font-weight-bold">Technical Program Committee:</p>
                 <p>Dr. M. G. Veena, IEEE, Senior Member, JSSSTU Mysuru (Chair)</p>
+
                 <p>Dr. Shrikant S. Tangade, IEEE Bangalore Section, REVA University, Bangalore (Co-Chair)</p>
+
                 <p>Dr. T P Srinivas, Associate Professor, IISc, Bengaluru</p>
-                <p>Dr. S. R. Mahadeva Prasanna, Professor, IIT Dharawad</p>
-                <p>Dr. V. Udayshankar, Professor,JSSSTU, Mysuru</p>
-                <p>Dr. Shankaraiah, Professor, JSSSTU, Mysuru</p>
+
+                <p>Dr. ShayanGarani, Professor, IISc, Bengaluru</p>
+
+                <p>Dr. MonjaySaha, Research Scientist, Emory University, USA</p>
+
+                <p>Dr. MargamChandrashekaran, Director, Wise Consultants and Services Pte Ltd, Singapore</p>
+
+                <p>Dr. VishwasLakkundi, Chair IEEE Computer Society Bangalore Chapter</p>
+
                 <p>Dr. Prathosh A.P.,Assistant Professor, IITD, New Delhi</p>
+
+                <p>Dr. S. R. Mahadeva Prasanna, Professor, IIT Dharawad</p>
+
+                <p>Dr. P. C. Srikanth, Execom member, IEEE Mysore Subsection, MCE Hassan</p>
+
                 <p>Dr. D. S. Guru, Professor and Chairman, DoS in Computer Science, University of Mysore</p>
-                <p>Dr. PrashanthcKalappa, Professor and Dean Natural Science, Adichunchanagiri University</p>
+
+                <p>Dr. PrashanthKalappa, Professor and Dean Natural Science, Adichunchanagiri University</p>
+
+                <p>Dr. Abhishek Appaji M, BMSCE, Bengaluru</p>
+
+                <p>Dr. JayakumarVenkatesan, Valles Marineris, Chennai</p>
+
+                <p>Dr. T Shreekanth, L&amp;T Technologies, Mysuru</p>
+
+                <p>Dr. Swetha Amit, Ramaiah Institute of technology, Bangaluru</p>
+
+                <p>Dr. Suresh M, SSIT, Tumkur</p>
+
+                <p>Dr. K V Suresh, Professor,SIT, Tumkur.</p>
+
+                <p>Dr. V. Udayshankar, Professor, JSSSTU, Mysuru</p>
+
+                <p>Dr. Shankaraiah, Professor, JSSSTU, Mysuru</p>
+
                 <p>Dr. U B Mahadevaswamy, Professor, JSSSTU, Mysuru</p>
+
                 <p>Dr. A. D Shreenivasa, Professor, JSSSTU, Mysuru</p>
+
                 <p>Dr. K T Veeramanju, Professor, JSSSTU, Mysuru</p>
+
                 <p>Dr. R.K.Bharathi, Associate Professor, JSSSTU, Mysuru</p>
-                <p>Dr.Jayakumar Venkatesan, Valles Marineris, Chennai</p>
-                <p>Dr. T Shreekanth, L&T Technologies, Mysuru</p>
+
                 <p>Prof. Nataraj C R Chairman IETE, Former Prof. SJCE, Mysuru</p>
               </div>
             </div>
@@ -250,15 +291,15 @@
                 <p>Prof. Shivaprasad N, Assistant Professor, JSSSTU, Mysuru (Co-chair 1)</p>
                 <p>Prof. Yashwanth S D, Assistant Professor, JSSSTU, Mysuru</p>
                 <p class="font-weight-bold">Organizing Chair:</p>
-                <p>Dr. N M Renukappa, Professor, JSSSTU, Mysuru (Chair)</p>
+                <p>Prof. Sujatha Kumari B A, IEEE, Associate Professor, JSSSTU, Mysuru (Chair)</p>
                 <p>Dr. S. B Rudraswamy, IEEE Assistant Professor, JSSSTU, Mysuru (Co-Chair)</p>
                 <p class="font-weight-bold">Publication Committee:</p>
                 <p>Dr. S.K.Niranjan, Professor, JSSSTU Mysuru (Chair)</p>
                 <p>S G Raghavendra Prasad, EXECOM Member, IEEE Bangalore Section (Co-chair)</p>
                 <p>Prof. Shashidhar R, IEEE, Assistant Professor, JSSSTU, Mysuru (Co-chair)</p>
+                <p>Dr. Parameshachari B D,Vice-Chair(Elect), IEEE Mysore Subsection, GSSSIETW, Mysuru.</p>
                 <p>Prof. Anitha S Prasad, Assistant Professor, JSSSTU, Mysuru</p>
                 <p class="font-weight-bold">Local Organizing Committee:</p>
-                <p>Prof. SujathaKumari B A, IEEE, Associate Professor, JSSSTU, Mysuru (Chair)</p>
                 <p>Prof. A Thyagaraja Murthy, IEEE, Associate Professor, JSSSTU, Mysuru (Co-Chair)</p>
                 <p>Prof. Supreetha M, IEEE, Assistant Professor, JSSSTU, Mysuru</p>
                 <p>Prof. Kavyashree M K, Assistant Professor, JSSSTU, Mysuru</p>
@@ -371,10 +412,10 @@
       <hr class="divider-light my-4" />
       <div class="row speakers my-5 d-flex justify-content-center">
         <div class="card col-md-5 col-lg-3 mx-3 my-3">
-          <img class="card-img-top mt-2" src="img/1.jpg" alt="Card image cap">
+          <!--<img class="card-img-top mt-2" src="img/1.jpg" alt="Card image cap">-->
           <div class="card-body">
-            <h5 class="card-title text-center">Name</h5>
-            <p class="card-text text-center">Nunc a commodo neque. Aliquam vulputate nunc ut lacus luctus, at blandit nibh ultricies. Phasellus commodo nisl eros, eu dictum elit mollis non. </p>
+            <h5 class="card-title text-center"></h5>
+            <p class="card-text text-center">Coming Soon </p>
             <p class="text-center speaker-social-media">
               <a href="#"><i class="fab fa-twitter fa-2x mx-2"></i></a>
               <a href="#"><i class="fab fa-linkedin fa-2x mx-2"></i></a>
@@ -383,10 +424,10 @@
           </div>
         </div>
         <div class="card col-md-5 col-lg-3 mx-3 my-3">
-          <img class="card-img-top mt-2" src="img/2.jpg" alt="Card image cap">
+          <!--<img class="card-img-top mt-2" src="img/2.jpg" alt="Card image cap">-->
           <div class="card-body">
-            <h5 class="card-title text-center">Name</h5>
-            <p class="card-text text-center">Nunc a commodo neque. Aliquam vulputate nunc ut lacus luctus, at blandit nibh ultricies. Phasellus commodo nisl eros, eu dictum elit mollis non. </p>
+            <h5 class="card-title text-center"></h5>
+            <p class="card-text text-center">Coming Soon</p>
             <p class="text-center speaker-social-media">
               <a href="#"><i class="fab fa-twitter fa-2x mx-2"></i></a>
               <a href="#"><i class="fab fa-linkedin fa-2x mx-2"></i></a>
@@ -395,10 +436,10 @@
           </div>
         </div>
         <div class="card col-md-5 col-lg-3 mx-3 my-3">
-          <img class="card-img-top mt-2 m-0" src="img/3.jpg" alt="Card image cap">
+          <!--<img class="card-img-top mt-2 m-0" src="img/3.jpg" alt="Card image cap">-->
           <div class="card-body">
-            <h5 class="card-title text-center">Name</h5>
-            <p class="card-text text-center">Nunc a commodo neque. Aliquam vulputate nunc ut lacus luctus, at blandit nibh ultricies. Phasellus commodo nisl eros, eu dictum elit mollis non. </p>
+            <h5 class="card-title text-center"></h5>
+            <p class="card-text text-center">Coming Soon </p>
             <p class="text-center speaker-social-media">
               <a href="#"><i class="fab fa-twitter fa-2x mx-2"></i></a>
               <a href="#"><i class="fab fa-linkedin fa-2x mx-2"></i></a>
@@ -456,7 +497,7 @@
       <div class="row">
         <div class="col-lg-3 col-md-6 ml-auto text-center mb-5 mb-lg-0">
           <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-          <div>+91 99999 88888</div>
+          <div>+91 91130 38563</div>
         </div>
         <div class="col-lg-3 col-md-6 mr-auto text-center mb-5 mb-lg-0">
           <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
