--- a/conference.html
+++ b/conference.html
@@ -44,10 +44,10 @@
   <div class="container py-5">
 
     <h1 class="text-center text-primary"> <br />About The Conference</h1><br />
-    <p>First IEEE International Conference on Electronics, Communication, Control systems and Computing Technologies (ICEC3T 2021) organized on 18- 19, December 2021 by JSS S&TU (SJCE), JSS Technical Institutions Campus, Mysuru, Karnataka, India
+    <p>First IEEE International Conference on Electronics, Communication, Control systems and Computing Technologies (ICEC3T 2021) organized on 17th – 19th, December 2021 by JSS S&TU (SJCE), JSS Technical Institutions Campus, Mysuru, Karnataka, India
       is a premier international conference and is technically sponsored by IEEE Bangalore Section. The theme for ICEC3T 2021 is to promote the recent innovations in various fields of engineering and technology bringing together academia and
-      industry. This conference provides an excellent opportunity and benefit for faculty members, research scholars, students and industry delegates to present, demonstrate and discuss innovative research developments in the fields of
-      electronics, communication, control systems and computing technology.</p>
+      industry. This conference provides an excellent opportunity and benefit for faculty members, research scholars, students and industry delegates to present, demonstrate and discuss innovative research developments in the fields of electronics,
+      communication, control systems and computing technology.</p>
 
     <div class="row">
       <div class="col-lg-4">
@@ -154,6 +154,24 @@
           <li>Computational Electromagnetics</li>
         </ul>
 
+      </div>
+
+      <div class="col-lg-4">
+        <h4>Electronics Engineering</h4>
+        <ul>
+          <li>Medical signal processing</li>
+          <li>Non-linear control systems</li>
+          <li>Biomedical instrumentation</li>
+          <li>Robotics </li>
+        </ul>
+      </div>
+
+      <div class="col-lg-4">
+        <h4>Computer Engineering</h4>
+        <ul>
+          <li>Machine Learning</li>
+          <li>Artificial Intelligence </li>
+        </ul>
       </div>
     </div>
 
