--- a/conference.html
+++ b/conference.html
@@ -44,7 +44,7 @@
   <div class="container py-5">
 
     <h1 class="text-center text-primary"> <br />About The Conference</h1><br />
-    <p>First IEEE International Conference on Electronics, Communication, Control systems and Computing Technologies (ICEC3T 2021) organized on 17th – 19th, December 2021 by JSS S&TU (SJCE), JSS Technical Institutions Campus, Mysuru, Karnataka, India
+    <p>First IEEE International Conference on Electronics, Communication, Control systems and Computing Technologies (ICEC3T 2021) organized on 17th – 18th, December 2021 by JSS S&TU (SJCE), JSS Technical Institutions Campus, Mysuru, Karnataka, India
       is a premier international conference and is technically sponsored by IEEE Bangalore Section. The theme for ICEC3T 2021 is to promote the recent innovations in various fields of engineering and technology bringing together academia and
       industry. This conference provides an excellent opportunity and benefit for faculty members, research scholars, students and industry delegates to present, demonstrate and discuss innovative research developments in the fields of electronics,
       communication, control systems and computing technology.</p>
@@ -81,6 +81,10 @@
           <li>Mechatronics Aerospace Electronics</li>
           <li>Avionics</li>
           <li>Home/Office Automation</li>
+           <li>Medical signal processing</li>
+          <li>Non-linear control systems</li>
+          <li>Biomedical instrumentation</li>
+          <li>Robotics </li>
         </ul>
         <br />
       </div>
@@ -116,6 +120,8 @@
           <li>Biomedial Signal Processing</li>
           <li>Biomedical Image Processing</li>
           <li>Pattern Recognition</li>
+          <li>Machine Learning</li>
+          <li>Artificial Intelligence </li>
         </ul>
         <br />
       </div>
@@ -156,7 +162,7 @@
 
       </div>
 
-      <div class="col-lg-4">
+<!--       <div class="col-lg-4">
         <h4>Electronics Engineering</h4>
         <ul>
           <li>Medical signal processing</li>
@@ -164,15 +170,15 @@
           <li>Biomedical instrumentation</li>
           <li>Robotics </li>
         </ul>
-      </div>
+      </div> -->
 
-      <div class="col-lg-4">
+<!--       <div class="col-lg-4">
         <h4>Computer Engineering</h4>
         <ul>
           <li>Machine Learning</li>
           <li>Artificial Intelligence </li>
         </ul>
-      </div>
+      </div> -->
     </div>
 
   </div>
