--- a/index.html
+++ b/index.html
@@ -231,9 +231,11 @@
             <div class="card mx-3 my-3 d-block w-100 px-5">
               <div class="card-body mx-3">
                 <p class="font-weight-bold">Technical Program Committee:</p>
-                <p>Dr. M. G. Veena, IEEE, Senior Member, JSSSTU Mysuru (Chair)</p>
+                 <p>Dr. Shrikant S. Tangade, IEEE Bangalore Section, REVA University, Bangalore (Chair)</p>
+                
+                <p>Dr. M. G. Veena, IEEE, Senior Member, JSSSTU Mysuru (Co-Chair)</p>
 
-                <p>Dr. Shrikant S. Tangade, IEEE Bangalore Section, REVA University, Bangalore (Co-Chair)</p>
+               
 
                 <p>Dr. T P Srinivas, Associate Professor, IISc, Bengaluru</p>
 
