--- a/index.html
+++ b/index.html
@@ -302,8 +302,8 @@
                 <p>Dr. Parameshachari B D,Vice-Chair(Elect), IEEE Mysore Subsection, GSSSIETW, Mysuru.</p>
                 <p>Prof. Anitha S Prasad, Assistant Professor, JSSSTU, Mysuru</p>
                 <p class="font-weight-bold">Local Organizing Committee:</p>
-                <p>Prof. A Thyagaraja Murthy, IEEE, Associate Professor, JSSSTU, Mysuru (Co-Chair)</p>
-                <p>Prof. Supreetha M, IEEE, Assistant Professor, JSSSTU, Mysuru</p>
+                <p>Prof. A Thyagaraja Murthy, IEEE, Associate Professor, JSSSTU, Mysuru (Chair)</p>
+                <p>Prof. Supreetha M, IEEE, Assistant Professor, JSSSTU, Mysuru (Co-Chair)</p>
                 <p>Prof. Kavyashree M K, Assistant Professor, JSSSTU, Mysuru</p>
                 <p>Prof. Halesh M R, Assistant Professor, JSSSTU, Mysuru</p>
               </div>
