--- a/index.html
+++ b/index.html
@@ -289,8 +289,8 @@
             <div class="card mx-3 my-3 d-block w-100 px-5">
               <div class="card-body mx-3">
                 <p class="font-weight-bold">Finance Committee:</p>
-                <p>Dr. S Gayathri, Associate Professor, JSSSTU, Mysuru (Chair)</p>
-                <p>Prof. Shivaprasad N, Assistant Professor, JSSSTU, Mysuru (Co-chair 1)</p>
+                <p>Dr. S Gayathri,IEEE, Associate Professor, JSSSTU, Mysuru (Chair)</p>
+                <p>Prof. Shivaprasad N,IEEE, Assistant Professor, JSSSTU, Mysuru (Co-chair 1)</p>
                 <p>Prof. Yashwanth S D, Assistant Professor, JSSSTU, Mysuru</p>
                 <p class="font-weight-bold">Organizing Chair:</p>
                 <p>Prof. Sujatha Kumari B A, IEEE, Associate Professor, JSSSTU, Mysuru (Chair)</p>
