--- a/registration.html
+++ b/registration.html
@@ -161,7 +161,8 @@
       <p>Note : INTERNATIONAL TRANSACTIONS FOR REGISTRATION KINDLY USE THE SWIFT CODE : X</p>
       <p>
         Note : AFTER DOING ONLINE REGISTRATION PLEASE MAIL THE FILLED REGISTRATION DETAILS, SCANNED IEEE COPYRIGHT RIGHT FORM, SCANNED IEEE MEMBERSHIP CARD (CLAIMING FOR IEEE MEMBERS AND STUDENT MEMBERS) AND SCANNED STUDENT IDENTITY CARD ( FOR NON
-        IEEE STUDENT MEMBERS)TO XXX
+        IEEE STUDENT MEMBERS)TO icec3t@sjce.ac.in
+
       </p>
     </div>
 
