--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
             </p>
           </i>
           <p>
-            <b>Organized by</b> IEEE SJCE Student branch
+            <b>Organized by</b> <br>IEEE SJCE Student branch
           </p>
           <p>
-            <b>Co-organized by</b> Department of Electronics and Communication Engineering<br /> and JSS Science and Technology University
+            <b>Co-organized by</b> <br>Department of Electronics and Communication Engineering<br /> and JSS Science and Technology University
           </p>
         </div>
       </div>
