--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
               </div>
             </div>
           </div>
-          <div class="carousel-item">
+<!--           <div class="carousel-item">
             <div class="card mx-3 my-3 d-block w-100 px-5">
               <div class="card-body mx-3">
                 <h5>
@@ -336,7 +336,7 @@
                 <p>Prof. Vinayprasad M S</p>
                 <p>Prof. Kavyashree K M</p>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
