--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               <p class="font-weight-bold" style="color:black">IEEE SJCE Student Branch in association with <br />Department of Electronics and Communication Engineering is organizing</p>
               <h1 class="text-uppercase font-weight-bold">ICEC3T 2021</h1>
               <hr class="divider-light my-4" />
-              <p class="mb-5 font-weight-bold" style="color:black">IEEE International Conference on Electronics,
+              <p class="mb-5 font-weight-bold" style="color:black">International Conference on Electronics,
                 Communication, Control systems and Computing Technologies –2021
               </p>
               <a class="btn btn-default" href="#overview"><span class="px-3  text-white">Find Out More</span></a>
@@ -116,7 +116,7 @@
       <hr class="divider my-4" />
       <div class="row d-flex justify-content-center">
         <div class="col-md-12 py-3" id="overview">
-          First IEEE International Conference on Electronics, Communication, Control systems and Computing Technologies (ICEC3T 2021) organized on 17th – 18th, December 2021 by JSS S&TU (SJCE), JSS Technical Institutions Campus, Mysuru, Karnataka,
+          First International Conference on Electronics, Communication, Control systems and Computing Technologies (ICEC3T 2021) organized on 17th – 18th, December 2021 by JSS S&TU (SJCE), JSS Technical Institutions Campus, Mysuru, Karnataka,
           India is a premier international conference and is technically sponsored by IEEE Bangalore Section. The theme for ICEC3T 2021 is to promote the recent innovations in various fields of engineering and technology bringing together academia
           and industry. This conference provides an excellent opportunity and benefit for faculty members, research scholars, students and industry delegates to present, demonstrate and discuss innovative research developments in the fields of
           electronics, communication, control systems and computing technology.<br /><br />
