--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       <div class="row d-flex justify-content-center">
         <div class="col-md-12 py-3" id="overview">
           First International Conference on Electronics, Communication, Control systems and Computing Technologies (ICEC3T 2021) organized on 17th – 18th, December 2021 by JSS S&TU (SJCE), JSS Technical Institutions Campus, Mysuru, Karnataka,
-          India is a premier international conference and is technically sponsored by IEEE Bangalore Section. The theme for ICEC3T 2021 is to promote the recent innovations in various fields of engineering and technology bringing together academia
+          India. The theme for ICEC3T 2021 is to promote the recent innovations in various fields of engineering and technology bringing together academia
           and industry. This conference provides an excellent opportunity and benefit for faculty members, research scholars, students and industry delegates to present, demonstrate and discuss innovative research developments in the fields of
           electronics, communication, control systems and computing technology.<br /><br />
         </div>
