--- a/conference.html
+++ b/conference.html
@@ -84,6 +84,14 @@
           <li>Non-linear control systems</li>
           <li>Biomedical instrumentation</li>
           <li>Robotics </li>
+          <li>Nanotechnology </li>
+          <li>Nanomaterials</li>
+          <li>Nano Electronics</li>
+          <li>Nano dielectric devices and Composites </li>
+          <li>Microelectronics </li>
+          <li>Smart sensors</li>
+           <li>	MEMS/NEMS </li>
+          <li>Green Technologies</li>
         </ul>
         <br />
       </div>
