--- a/callforpapers.html
+++ b/callforpapers.html
@@ -80,6 +80,18 @@
           <li>Mechatronics Aerospace Electronics</li>
           <li>Avionics</li>
           <li>Home/Office Automation</li>
+           <li>Medical signal processing</li>
+          <li>Non-linear control systems</li>
+          <li>Biomedical instrumentation</li>
+          <li>Robotics </li>
+          <li>Nanotechnology </li>
+          <li>Nanomaterials</li>
+          <li>Nano Electronics</li>
+          <li>Nano dielectric devices and Composites </li>
+          <li>Microelectronics </li>
+          <li>Smart sensors</li>
+           <li>	MEMS/NEMS </li>
+          <li>Green Technologies</li>
         </ul>
         <br />
       </div>
@@ -115,6 +127,8 @@
           <li>Biomedial Signal Processing</li>
           <li>Biomedical Image Processing</li>
           <li>Pattern Recognition</li>
+          <li>Machine Learning</li>
+          <li>Artificial Intelligence </li>
         </ul>
         <br />
       </div>
@@ -154,7 +168,7 @@
         </ul>
 
       </div>
-      <div class="col-lg-4">
+<!--       <div class="col-lg-4">
         <h4>Electronics Engineering</h4>
         <ul>
           <li>Medical signal processing</li>
@@ -170,7 +184,7 @@
           <li>Machine Learning</li>
           <li>Artificial Intelligence </li>
         </ul>
-      </div>
+      </div> -->
     </div>
     <br />
     <hr />
